fix css and html to make todo look aligned properly

--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ a:hover {
   color: #f28888;
 }
 
-.list .item.editing .actions {
+.list .item.editing-item .actions {
   margin-top: 17px;
 }
 
@@ -80,19 +80,20 @@ a:hover {
   padding: 25px 0 27px 25px;
 }
 
-//   input[type="checkbox"] {
-  //   display: none;
-  // }
-  // input[type="checkbox"] + span {
-  //   display: inline-block;
-  //   width: 19px;
-  //   height: 19px;
-  //   margin: -1px 4px 0 0;
-  //   vertical-align: middle;
-  //   background: url(checkbox-empty.svg) left top no-repeat;
-  //   cursor: pointer;
-  // }
-  // input[type="checkbox"]:checked + span {
-  //   background: url(checkbox-filled.svg) left top no-repeat;
-  // }
+input[type="checkbox"] {
+  display: none;
+}
 
+input[type="checkbox"] + span {
+  display: inline-block;
+  width: 19px;
+  height: 19px;
+  margin: -1px 4px 0 0;
+  vertical-align: middle;
+  background: url(checkbox-empty.svg) left top no-repeat;
+  cursor: pointer;
+}
+
+input[type="checkbox"]:checked + span {
+  background: url(checkbox-filled.svg) left top no-repeat;
+}
